--- a/style.css
+++ b/style.css
@@ -1,17 +1,28 @@
 .container {
     width: 20%;
     margin: auto;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 
 }
 input, h1 {
     display: inline-block;
     padding: 10px;
 }
+#text {
+    border: 4px solid rgb(28, 11, 44);
+    border-radius: 10px;
+}
 .container1 {
     margin-top: 10px;
     margin-left: -20px;
     border-radius: 100px;
-
+    display: flex;
+}
+.container1 button{
+    padding: 10px;
+    background-color: cornflowerblue;
+    color: cornsilk;
+    border-radius: 15px;
 }
 input {
     text-align: center;
